test/Serialization/typed_throws.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -emit-module -module-name def_typed_throws -o %t %S/Inputs/def_typed_throws.code
// RUN: toolchain-bcanalyzer %t/def_typed_throws.codemodule | %FileCheck %s
// RUN: %target-typecheck-verify-language -I %t

// RUN: %target-language-ide-test(mock-sdk: %clang-importer-sdk) -print-module -module-to-print=def_typed_throws -I %t -source-filename=%s | %FileCheck -check-prefix=CHECK-PRINT %s

// CHECK-NOT: UnknownCode

// CHECK-PRINT-DAG: fn throwsMyError() throws(MyError)
// CHECK-PRINT-DAG: init() throws(MyError)
// CHECK-PRINT-DAG: var value: Int { get throws(MyError) }

import def_typed_throws

fn testThrows() {
  immutable _: () -> Void = throwsMyError
  // expected-error@-1{{invalid conversion from throwing function of type '() throws(MyError) -> ()'}}

  immutable _: () -> Void = SomeStruct.init
  // expected-error@-1{{invalid conversion from throwing function of type '() throws(MyError) -> SomeStruct'}}
}
